Add header and quiz container to html and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width.device.width", intial-scale="1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title> 
+    <title>Quiz Me</title> 
 </head>
 <body>
+    <header>
+        <h1 id=logo>Quiz Me</h1>
+    </header>
+    <section class="container">
+        <div id="quiz-container">
+            <h2 class="choose-quiz">Choose Quiz Category</h2>
+            <div>
+                <button id="first-category">Music</button>
+                <hr>
+            </div>
+            <div id="second-category">
+                <button id="second-category">Sport</button>
+                <hr>
+            </div>
+            <div>
+                <button id="third-category">Film</button>
+                <hr>
+            </div>
+            <div>
+                <button id="fourth-category">Placeholder</button>
+                <hr>
+            </div>
+        </div>
+    </section>
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
